@@ -36,5 +36,5 @@ EBUILD tomcat-6.0.32.ebuild 6930 RMD160 ade08bc4b7e28962cc484e2759e38d3e3e8a9be3
 EBUILD tomcat-7.0.5-r1.ebuild 7097 RMD160 9c17268799c3e6f36d30985b7f2757e51658aef2 SHA1 afcb2863df4d9b8066dd831b77b253e19f6e9a72 SHA256 0e60ee536b32d0721b6128194d24fec08bb2bcb9e58a2bd941e017b45e8712f3
 EBUILD tomcat-7.0.6.ebuild 7084 RMD160 750c35018ca313ec5c074e013883aa35452d6931 SHA1 e146f18bb292826b5e3c71c6f6f184418477be54 SHA256 1dad1d38658ead86e0d7ebf78407e7ddb9b54aa555b9af3a2caf1dcc7610ecb8
 EBUILD tomcat-7.0.8.ebuild 7084 RMD160 21785986e0958df3ab386eb873a53e3f8afcffd3 SHA1 b7eb5c717c1952f3d3695d3791b1bb7e2e9c19b9 SHA256 c7484ddf9f029be21412ac203fc3477c45c59c3508d894f44af4df589c8f7c7a
-MISC ChangeLog 61441 RMD160 63a09fadef699d22384f093351023735f332594e SHA1 9ed11fd4ddecd111731fa88af44ff593a3ec82c6 SHA256 8a82bb4b1607d73d35948fa64109ac75a8f40e3c8a4f30232373b59de4f3d3d9
-MISC metadata.xml 658 RMD160 db94c7bc6ba622acfe88f970aa7d2e6fa1718a2a SHA1 aa25178fefb68df9dee7d8fc0d925a2fbbb655dd SHA256 5ddc2743ca9e3ec0bef7983248a9c8eda9238425288efb3acdecc8a828714bd8
+MISC ChangeLog 61672 RMD160 33aaa85db7799ef24f3b650fef5d22766f004f67 SHA1 bb332049b92d59746239d89d847b168e11d4b2b4 SHA256 a61a693896fc7d1b3fd8d42205a05c36841038a134b6c904568109e7e17bdf28
+MISC metadata.xml 521 RMD160 72b6ce433f5c9a65deaa0c1830c070c3adbcf33a SHA1 2c4f4fd887a5df9e955c711d0fcd21a5cab90a2d SHA256 dbab559e58c59eddd5df1c3bb39d17b26fadb587ad5dab51fc6fa7af5e601e22
