@@ -2,11 +2,6 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 	<herd>java</herd>
-	<maintainer>
-		<email>mike@weisso.com</email>
-		<name>Mike Weissman</name>
-		<description>Proxy maintainer</description>
-	</maintainer>
 	<longdescription>
 	Tomcat is the servlet container that is used in the official Reference
 	Implementation for the Java Servlet and JavaServer Pages technologies.
